# OOPChessProject

./: .clang-format  .editorconfig  README.md  RETROSPECTIVE.md  imgui.ini  meson.build
include/: app.hpp  bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp  stockfish.hpp
src/: app.cpp  main.cpp  pieces.cpp  stockfish.cpp
subprojects/: sdl3_image.wrap
